Reorganize content and increase broadcast join timeout

--- a/notebook_main.ipynb
+++ b/notebook_main.ipynb
@@ -14,21 +14,25 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import isnull, when, count, col, avg\n",
-    "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from pyspark.ml.stat import Correlation\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.probability import FreqDist\n",
     "from pyspark.sql import SparkSession\n",
+    "from nltk.corpus import stopwords\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import cluster\n",
+    "from wordcloud import WordCloud\n",
     "import plotly.express as px\n",
+    "from sklearn import cluster\n",
     "from scipy import stats\n",
     "import seaborn as sns\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import plotly\n",
     "import string\n",
-    "import math"
+    "import nltk\n",
+    "import math\n",
+    "import re"
    ]
   },
   {
@@ -44,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uri_db = 'mongodb+srv://virus:sartianiregna@cluster0.vyk6g.mongodb.net'\n",
+    "uri_db = 'mongodb+srv://username:password@cluster0.vyk6g.mongodb.net'\n",
     "spark_connector_uri = 'org.mongodb.spark:mongo-spark-connector_2.11:2.2.7'"
    ]
   },
@@ -59,6 +63,7 @@
     "    .master('local') \\\n",
     "    .config('spark.mongodb.input.uri', uri_db) \\\n",
     "    .config('spark.jars.packages', spark_connector_uri) \\\n",
+    "    .config(\"spark.sql.broadcastTimeout\", '50000') \\\n",
     "    .getOrCreate()\n",
     "\n",
     "# Get context from SparkSession object.\n",
@@ -467,6 +472,7 @@
     "\n",
     "print(\"# I 100 prodotti con il maggior numero di recensioni #\")\n",
     "df_1.show(100)\n",
+    "\n",
     "df_1.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_1.csv', header = 'true')"
    ]
   },
@@ -601,6 +607,7 @@
     "\n",
     "print(\"# I 100 reviewer che hanno effettuato il maggior numero di recensioni #\")\n",
     "df_2.show(100)\n",
+    "\n",
     "df_2.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_2.csv', header = 'true')"
    ]
   },
@@ -687,6 +694,7 @@
     "\n",
     "print(\"# Le 50 marche i cui prodotti sono stati maggiormente recensiti #\")\n",
     "df_3.show(50)\n",
+    "\n",
     "df_3.limit(50).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_3.csv', header = 'true')"
    ]
   },
@@ -774,6 +782,7 @@
     "\n",
     "print(\"# Le 50 marche i cui prodotti hanno un prezzo medio maggiore #\")\n",
     "df_4.show(50)\n",
+    "\n",
     "df_4.limit(50).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_4.csv', header = 'true')"
    ]
   },
@@ -916,6 +925,7 @@
     "\n",
     "print(\"# I 100 prodotti con le migliori recensioni #\")\n",
     "df_5.show(100)\n",
+    "\n",
     "df_5.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_5.csv', header = 'true')"
    ]
   },
@@ -1057,6 +1067,7 @@
     "\n",
     "print(\"# Le 100 marche con le migliori recensioni #\")\n",
     "df_6.show(100)\n",
+    "\n",
     "df_6.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_6.csv', header = 'true')"
    ]
   },
@@ -1202,6 +1213,7 @@
     "    \n",
     "print(\"# I 100 reviewer che hanno effettuato recensioni con la maggiore utilità media #\")\n",
     "df_7.show(100)\n",
+    "\n",
     "df_7.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_7.csv', header = 'true')"
    ]
   },
@@ -1331,6 +1343,7 @@
     "    \n",
     "print(\"# I 100 reviewer che hanno effettuato recensioni con la minore utilità media #\")\n",
     "df_8.show(100)\n",
+    "\n",
     "df_8.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_8.csv', header = 'true')"
    ]
   },
@@ -1461,6 +1474,7 @@
     "\n",
     "print('# I 100 prodotti con il migliore ranking nelle vendite #')\n",
     "df_9.show(100)\n",
+    "\n",
     "df_9.limit(100).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_9.csv', header = 'true')"
    ]
   },
@@ -1545,6 +1559,7 @@
     "\n",
     "print('# Le 50 marche i cui prodotti hanno il ranking medio migliore #')\n",
     "df_10.show(50)\n",
+    "\n",
     "df_10.limit(50).coalesce(1).write.format('com.databricks.spark.csv').save('./csv/df_10.csv', header = 'true')"
    ]
   },
@@ -1686,7 +1701,7 @@
     "    \n",
     "    # Compute correlation matrix.\n",
     "    matrix = Correlation.corr(df_vector, 'corr', method)\n",
-    "    # Format and shape correlation matrix.\n",
+    "    # Format and reshape correlation matrix.\n",
     "    corr_mat = matrix.collect()[0]['{0}({1})'.format(method, 'corr')].values.reshape(num_labels, num_labels)\n",
     "    \n",
     "    # Set color map.\n",
@@ -1706,11 +1721,12 @@
     "                     verticalalignment='center'   , \\\n",
     "                     color=color_text)\n",
     "    \n",
-    "    plt.title('{0} method'.format(method.capitalize()))\n",
+    "    plt.title('{0} method'.format(method.capitalize()), fontsize=16)\n",
     "    # Set axes labels and colorbar.\n",
     "    plt.xticks(range(num_labels), labels, fontsize=14, rotation=90)\n",
     "    plt.yticks(range(num_labels), labels, fontsize=14)\n",
     "    cb = plt.colorbar(im, fraction=0.046, pad=0.04)\n",
+    "    plt.clim(-1, 1)\n",
     "    plt.tight_layout()\n",
     "    \n",
     "    indx += 1\n",
@@ -1732,36 +1748,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Take the first 1000 objects with most reviews.\n",
     "df_most_reviews = df_meta \\\n",
-    "    .join(df_1.filter('reviews_count_product > 500'), on='asin')\n",
+    "    .join(df_1.limit(100), on='asin')\n",
     "\n",
-    "df_result = df_reviews \\\n",
-    "    .join(df_most_reviews, on='asin')\n",
-    "\n",
-    "df_good_reviews = df_result \\\n",
+    "# Count the number of good reviews and bad reviews per object.\n",
+    "# N.B. A review is considered good if its overall is greater \n",
+    "# than 3; bad if its overall is lesser than 3; neutral otherwise. \n",
+    "# Neutral reviews are deliberately ignored in this analysis.\n",
+    "df_good_reviews = df_reviews \\\n",
     "    .select('asin', 'overall') \\\n",
     "    .filter('overall > 3') \\\n",
     "    .groupBy('asin') \\\n",
     "    .count() \\\n",
     "    .withColumnRenamed('count', 'good_reviews')\n",
     "\n",
-    "df_bad_reviews = df_result \\\n",
+    "df_bad_reviews = df_reviews \\\n",
     "    .select('asin', 'overall') \\\n",
     "    .filter('overall < 3') \\\n",
     "    .groupBy('asin') \\\n",
     "    .count() \\\n",
     "    .withColumnRenamed('count', 'bad_reviews')\n",
     "\n",
-    "# Create new feature revenue. \n",
-    "df_result = df_result.rdd \\\n",
-    "    .map(lambda x: x + (x['price'] * math.exp((1 - x['sales_rank']) / 100), )) \\\n",
-    "    .toDF(df_result.columns + ['revenue'])\n",
+    "# Create column <revenue>, that aggregate <price> and <sales_rank> columns with \n",
+    "# the following formula: <revenue> = <price> * exp((1 - <rank>) / mean_rank).\n",
+    "mean_rank = df_meta.agg(avg('sales_rank')).first()[0]\n",
+    "df_most_reviews = df_most_reviews.rdd \\\n",
+    "    .map(lambda x: x + (x['price'] * math.exp((1 - x['sales_rank']) / mean_rank), )) \\\n",
+    "    .toDF(df_most_reviews.columns + ['revenue'])\n",
     "\n",
-    "df_result = df_result.select('asin', 'revenue').distinct()\n",
+    "df_most_reviews = df_most_reviews.select('asin', 'revenue')\n",
     "\n",
-    "df_result = df_result \\\n",
+    "df_result = df_most_reviews \\\n",
     "    .join(df_good_reviews, on='asin') \\\n",
     "    .join(df_bad_reviews, on='asin')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### KMeans"
    ]
   },
   {
@@ -1770,20 +1797,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.asarray(df_result.collect()).reshape(df_result.count(), 4)\n",
+    "X = df_result.collect()\n",
+    "X = np.asarray(X).reshape(df_result.count(), 4)\n",
     "\n",
-    "asins = X[:, 0]\n",
+    "# products_infos = [<asin>]\n",
+    "pruducts_infos = X[:, 0]\n",
+    "# features = [<revenue>, <good_reviews>, <bad_reviews>]\n",
     "features = X[:, 1:].astype(np.float)\n",
     "\n",
+    "# Normalize features in range [0; 1].\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(features)\n",
     "features_norm = scaler.transform(features)\n",
     "\n",
+    "# N.B. KMeans results are not reproducible unless the keyword random_state is not defined.\n",
     "kmeans = cluster.KMeans(5, random_state=10).fit(features_norm)\n",
     "\n",
+    "# Get cluster's indices.\n",
     "labels = kmeans.labels_\n",
+    "# Map cluster's indices to colors.\n",
     "list_colors = ['#636EFA', '#EF553B', '#00CC96', '#AB63FA', '#FFA15A', '#19D3F3', '#FF6692', '#B6E880', '#FF97FF', '#FECB52']\n",
-    "# Colors changes with dataset!\n",
     "colors = [list_colors[label] for label in labels]\n",
     "\n",
     "fig = px.scatter_3d(x=features_norm[:, 1], y=features_norm[:, 2], z=features_norm[:, 0], color=colors)\n",
@@ -1792,10 +1825,10 @@
     "    title='3D Scatter Plot',\n",
     "    scene=dict(\n",
     "        xaxis=dict(\n",
-    "            title_text='Good Reviews'\n",
+    "            title_text='# Good Reviews (overall > 3)'\n",
     "        ),\n",
     "        yaxis=dict(\n",
-    "            title_text='Bad Reviews'\n",
+    "            title_text='# Bad Reviews (overall < 3)'\n",
     "        ),\n",
     "        zaxis=dict(\n",
     "            title_text='Revenue'\n",
@@ -1812,7 +1845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asins_filtered = [X[i, 0] for i in range(len(colors)) if colors[i] == '#00CC96']\n",
+    "asins_filtered = [X[i, 0] for i in range(len(colors)) if colors[i] == '#EF553B']\n",
     "\n",
     "titles_descriptions_filtered = df_meta.select('asin', 'title', 'description') \\\n",
     "    .rdd.map(lambda x: [x['title'], x['description']] if x['asin'] in asins_filtered else []) \\\n",
@@ -1828,40 +1861,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.probability import FreqDist\n",
-    "from nltk.corpus import stopwords\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re\n",
-    "\n",
-    "import nltk\n",
-    "\n",
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
     "\n",
     "stop_words = stopwords.words('english')\n",
+    "stop_words.append('No')\n",
+    "stop_words.append('Brand')\n",
+    "stop_words.append('Description')\n",
+    "\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "\n",
+    "# Remove HTML or XML tags.\n",
     "text_cleaned = re.sub('<[^<]+?>', '', text)\n",
     "\n",
+    "# Remove punctuation.\n",
     "text_no_punctuation = text_cleaned.translate(str.maketrans(' ', ' ', string.punctuation))\n",
     "    \n",
     "text_splitted = text_no_punctuation.split()\n",
     "\n",
+    "# Identify words as nouns, verbs, etc.\n",
     "text_pos_tag = nltk.pos_tag(text_splitted)\n",
     "    \n",
     "text_filtered = []\n",
     "for pair in text_pos_tag:\n",
-    "    if pair[1] in ['NN', 'NNS', 'NNP', 'NNPS']:\n",
-    "        text_filtered.append(pair[0])\n",
+    "    word = pair[0]\n",
+    "    tag = pair[1]\n",
+    "    \n",
+    "    if tag in ['NN', 'NNS', 'NNP', 'NNPS'] and word not in stop_words:\n",
+    "        text_filtered.append(word)\n",
     "            \n",
-    "#text_lemmed = []\n",
-    "#for word in text_filtered:\n",
-    "#    lemmed_word = lemmatizer.lemmatize(word)\n",
-    "#    text_lemmed.append(lemmed_word)   \n",
-    "            \n",
-    "fdist = FreqDist(text_lemmed)\n",
-    "fdist.most_common(50)"
+    "fdist = FreqDist(text_filtered)\n",
+    "fdist.most_common(100)"
    ]
   },
   {
@@ -1870,10 +1900,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wordcloud import WordCloud, STOPWORDS\n",
-    "\n",
-    "stopwords = set(STOPWORDS)\n",
-    "wordcloud = WordCloud(width=1000, height=1000, background_color='white', stopwords=stopwords, min_font_size=10).generate(' '.join(text_lemmed))\n",
+    "wordcloud = WordCloud(width=1000, height=1000, background_color='white', stopwords=stop_words, min_font_size=10).generate(' '.join(text_filtered))\n",
     "\n",
     "plt.figure(figsize = (8, 8), facecolor = None)\n",
     "plt.imshow(wordcloud)\n",
@@ -1895,7 +1922,7 @@
   "kernelspec": {
    "display_name": "Python 3.7.6 64-bit ('base': conda)",
    "language": "python",
-   "name": "python37664bitbaseconda1e4a57b5221b4d94a75695a8a46b4d11"
+   "name": "python37664bitbasecondad54da413211c4fdb9c2b9bc2046d2ac1"
   },
   "language_info": {
    "codemirror_mode": {
