Update text analysis part in notebook

--- a/notebook_main.ipynb
+++ b/notebook_main.ipynb
@@ -708,7 +708,7 @@
     "    .groupBy('asin') \\\n",
     "    .count() \\\n",
     "    .withColumnRenamed('count', 'bad_reviews')\n",
-    "\n",
+    "    \n",
     "# Create column <revenue>, that aggregate <price> and <sales_rank> columns with \n",
     "# the following formula: <revenue> = <price> * exp((1 - <rank>) / mean_rank).\n",
     "mean_rank = df_most_reviews.agg({'sales_rank': 'avg'}).first()[0]\n",
@@ -737,12 +737,11 @@
    "outputs": [],
    "source": [
     "X = df_result.collect()\n",
-    "X = np.asarray(X).reshape(df_result.count(), 4)\n",
+    "X = np.asarray(X).reshape(df_result.count(), len(df_result.columns))\n",
     "\n",
     "# products_infos = [<asin>]\n",
     "pruducts_infos = X[:, 0]\n",
-    "# features = [<revenue>, <good_reviews>, <bad_reviews>]\n",
-    "features = X[:, 1:].astype(np.float)\n",
+    "# features = [<revenue>, <good_reviews>, <bad_reviews>df_metares = X[:, 1:].astype(np.float)\n",
     "\n",
     "# Normalize features in range [0; 1].\n",
     "scaler = MinMaxScaler()\n",
@@ -767,7 +766,7 @@
     "            title_text='# Good Reviews (overall > 3)'\n",
     "        ),\n",
     "        yaxis=dict(\n",
-    "            title_text='# Bad Reviews (overall < 3)'\n",
+    "            title_text='# Bad  Reviews (overall < 3)'\n",
     "        ),\n",
     "        zaxis=dict(\n",
     "            title_text='Revenue'\n",
@@ -795,12 +794,12 @@
     "asins_filtered = [X[i, 0] for i in range(len(colors)) if colors[i] == '#EF553B']\n",
     "\n",
     "# Get title and description attributes with filtered asins.\n",
-    "titles_descriptions_filtered = df_meta.select('asin', 'title', 'description') \\\n",
-    "    .rdd.map(lambda x: [x['title'], x['description']] if x['asin'] in asins_filtered else []) \\\n",
-    "    .collect()\n",
+    "df_filtered = df_meta \\\n",
+    "    .select('asin', 'title', 'description') \\\n",
+    "    .filter(df_meta['asin'].isin(asins_filtered))\n",
+    "titles_descriptions_filtered = np.asarray(df_filtered.collect()).reshape(df_filtered.count(), len(df_filtered.columns))\n",
     "# Merge title and description attributes in a unique text blob.\n",
-    "titles_descriptions_filtered = np.asarray([' '.join(a) for a in titles_descriptions_filtered if len(a) != 0])\n",
-    "text = ' '.join(titles_descriptions_filtered)\n",
+    "blob = ' '.join([' '.join(a[1: ]) for a in titles_descriptions_filtered])\n",
     "\n",
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
@@ -814,7 +813,7 @@
     "stop_words.append('Description')\n",
     "\n",
     "# Remove HTML or XML tags.\n",
-    "text_cleaned = re.sub('<[^<]+?>', '', text)\n",
+    "text_cleaned = re.sub('<[^<]+?>', '', blob)\n",
     "\n",
     "# Remove punctuation.\n",
     "text_no_punctuation = text_cleaned.translate(str.maketrans(' ', ' ', string.punctuation))\n",
@@ -872,15 +871,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get all Victorinox items.\n",
-    "df_vict = df_meta \\\n",
-    "    .join(df_reviews, on='asin') \\\n",
-    "    .filter(\"brand = 'Victorinox'\")\n",
+    "# Get all Victorinox items with asin equal to B00004YVAJ.\n",
+    "df_vict = df_reviews \\\n",
+    "    .join(df_meta, on='asin') \\\n",
+    "    .filter(\"asin = 'B00004YVAJ'\") \\\n",
+    "    .select('title', 'description')\n",
     "\n",
-    "# Create text blob with summary and reviewText attributes.\n",
-    "mat = np.asarray(df_vict.collect()).reshape(df_vict.count(), len(df_vict.columns))\n",
-    "mat = [a for a in mat if a[0] in asins_filtered]\n",
-    "blob = ' '.join([' '.join([a[12], a[8]]) for a in mat])\n",
+    "# Create text blob with title and description attributes.\n",
+    "titles_descriptions_vict = np.asarray(df_vict.collect()).reshape(df_vict.count(), len(df_vict.columns))\n",
+    "blob = ' '.join([' '.join(a) for a in titles_descriptions_vict])\n",
     "\n",
     "# Remove HTML or XML tags.\n",
     "text_cleaned = re.sub('<[^<]+?>', '', blob)\n",
@@ -924,12 +923,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get summary and reviewText attributes from Victorinox items. Also, select\n",
-    "# negative reviews and reviews with number of people that found the review \n",
-    "# useful greater than 0.\n",
+    "# Get summary and reviewText attributes from Victorinox items with asin equal\n",
+    "# to B00004YVAJ. Also, select negative reviews and reviews with number of people \n",
+    "# that found the review useful greater than 0.\n",
     "df_vict = df_reviews \\\n",
     "    .join(df_meta, on='asin') \\\n",
-    "    .filter(\"brand = 'Victorinox' and helpful_pos > 0 and overall < 3\") \\\n",
+    "    .filter(\"asin = 'B00004YVAJ' and helpful_pos > 0 and overall < 3\") \\\n",
     "    .select('summary', 'reviewText')\n",
     "\n",
     "text = np.asarray(df_vict.collect()).reshape(df_vict.count(), 2)\n",
@@ -963,6 +962,13 @@
     "grams = nltk.ngrams(text_no_stopwords, 5)\n",
     "for g in grams: print(g)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
